traces/bug_56.txt
examples++-load/mat_psi.cpp:47: error: NULL_DEREFERENCE
  pointer `a` last assigned on line 46 could be null and is dereferenced at line 47, column 6.
Showing all 26 steps of the trace


examples++-load/mat_psi.cpp:39:5: start of procedure MatrixUpWind3
37.       typedef Matrice_Creuse<R> * Result;
38.       Expression emat,expTh,expc,expu1,expu2,expu3; 
39.       MatrixUpWind3(const basicAC_F0 & args) 
          ^
40.       {   
41.   	

examples++-load/mat_psi.cpp:51:29: Skipping E_F0: function or method not found
49.   	expu1= CastTo<double>((*a)[0]);
50.   	expu2= CastTo<double>((*a)[1]);
51.   	expu3= CastTo<double>((*a)[2]);
                                  ^
52.   	
53.       }

examples++-load/mat_psi.cpp:42:2: 
40.       {   
41.   	
42. > 	args.SetNameParam();
43.   	emat =args[0];
44.   	expTh= to<pmesh3>(args[1]);

src/fflib/AFunction2.cpp:1001:1: start of procedure SetNameParam
  999.   }
  1000.   
  1001. > void basicAC_F0::SetNameParam(int n,name_and_type *l , Expression * e) const 
  1002.   {
  1003.    int k=0;

src/fflib/AFunction2.cpp:1003:2: 
  1001.   void basicAC_F0::SetNameParam(int n,name_and_type *l , Expression * e) const 
  1002.   {
  1003. >  int k=0;
  1004.    if ( !n && !named_parameter)  return;
  1005.    

src/fflib/AFunction2.cpp:1004:8: Taking true branch
  1002.   {
  1003.    int k=0;
  1004.    if ( !n && !named_parameter)  return;
                 ^
  1005.    
  1006.     for (int i=0;i<n;i++)

src/fflib/AFunction2.cpp:1004:14: Taking false branch
  1002.   {
  1003.    int k=0;
  1004.    if ( !n && !named_parameter)  return;
                       ^
  1005.    
  1006.     for (int i=0;i<n;i++)

src/fflib/AFunction2.cpp:1006:8: 
  1004.    if ( !n && !named_parameter)  return;
  1005.    
  1006. >   for (int i=0;i<n;i++)
  1007.     {
  1008.        C_F0  ce=find(l[i].name) ;

src/fflib/AFunction2.cpp:1006:16: Loop condition is false. Leaving loop
  1004.    if ( !n && !named_parameter)  return;
  1005.    
  1006.     for (int i=0;i<n;i++)
                         ^
  1007.     {
  1008.        C_F0  ce=find(l[i].name) ;

src/fflib/AFunction2.cpp:1027:7: Taking false branch
  1025.     }
  1026.     
  1027.    if (!named_parameter) return;
                ^
  1028.     
  1029.     if ((size_t) k!=  named_parameter->size()) 

src/fflib/AFunction2.cpp:1029:7: Taking true branch
  1027.    if (!named_parameter) return;
  1028.     
  1029.     if ((size_t) k!=  named_parameter->size()) 
                ^
  1030.      {
  1031.         cout << " Sorry some name parameter are not used!  found" <<  k << " == " << named_parameter->size() <<endl;

src/fflib/AFunction2.cpp:1031:7: Skipping operator<<: function or method not found
  1029.     if ((size_t) k!=  named_parameter->size()) 
  1030.      {
  1031.         cout << " Sorry some name parameter are not used!  found" <<  k << " == " << named_parameter->size() <<endl;
                ^
  1032.         for(const_iterator ii=named_parameter->begin(); ii != named_parameter->end();ii++)
  1033.          {

src/fflib/AFunction2.cpp:1032:11: Skipping _Rb_tree_const_iterator: function or method not found
  1030.      {
  1031.         cout << " Sorry some name parameter are not used!  found" <<  k << " == " << named_parameter->size() <<endl;
  1032.         for(const_iterator ii=named_parameter->begin(); ii != named_parameter->end();ii++)
                    ^
  1033.          {
  1034.           for (int i=0;i<n;i++)

src/fflib/AFunction2.cpp:1032:55: Loop condition is false. Leaving loop
  1030.      {
  1031.         cout << " Sorry some name parameter are not used!  found" <<  k << " == " << named_parameter->size() <<endl;
  1032.         for(const_iterator ii=named_parameter->begin(); ii != named_parameter->end();ii++)
                                                                ^
  1033.          {
  1034.           for (int i=0;i<n;i++)

src/fflib/AFunction2.cpp:1040:10: Taking false branch
  1038.           L1:;
  1039.          }
  1040.       if ( n && mpirank==0) {
                   ^
  1041.       cerr << " The named parameter can be " << endl;
  1042.       for (int i=0;i<n;i++)

src/fflib/AFunction2.cpp:1045:5: Skipping CompileError(): function or method not found
  1043.          cerr << "\t" << l[i].name << " =  <" << l[i].type->name() << ">\n";
  1044.       }
  1045.       CompileError("Unused named parameter");  
              ^
  1046.      }
  1047.   }

src/fflib/AFunction2.cpp:1029:3: 
  1027.    if (!named_parameter) return;
  1028.     
  1029. >   if ((size_t) k!=  named_parameter->size()) 
  1030.      {
  1031.         cout << " Sorry some name parameter are not used!  found" <<  k << " == " << named_parameter->size() <<endl;

src/fflib/AFunction2.cpp:1047:1: return from a call to basicAC_F0_SetNameParam
  1045.       CompileError("Unused named parameter");  
  1046.      }
  1047. > }
  1048.   
  1049.   

examples++-load/mat_psi.cpp:43:2: Skipping operator_E_F0_*: function or method not found
41.   	
42.   	args.SetNameParam();
43.   	emat =args[0];
       ^
44.   	expTh= to<pmesh3>(args[1]);
45.   	expc = CastTo<double>(args[2]);

examples++-load/mat_psi.cpp:44:2: Skipping operator_E_F0_*: function or method not found
42.   	args.SetNameParam();
43.   	emat =args[0];
44.   	expTh= to<pmesh3>(args[1]);
       ^
45.   	expc = CastTo<double>(args[2]);
46.   	const E_Array * a= dynamic_cast<const E_Array*>((Expression) args[3]);

examples++-load/mat_psi.cpp:45:2: Skipping operator[]: function or method not found
43.   	emat =args[0];
44.   	expTh= to<pmesh3>(args[1]);
45.   	expc = CastTo<double>(args[2]);
       ^
46.   	const E_Array * a= dynamic_cast<const E_Array*>((Expression) args[3]);
47.   	if (a->size() != 3) CompileError("syntax:  MatrixUpWind0(Th,rhi,[u1,u2])");

src/fflib/lgmesh3.hpp:28:1: start of procedure CastTo<double>()
  26.   
  27.   template<class Result>
  28. > inline Expression CastTo(const C_F0 & f) { return atype<Result>()->CastTo(f);}
  29.   
  30.   // <<BCastTo>>

src/fflib/lgmesh3.hpp:28:44: Skipping operator_E_F0_*: function or method not found
  26.   
  27.   template<class Result>
  28.   inline Expression CastTo(const C_F0 & f) { return atype<Result>()->CastTo(f);}
                                                   ^
  29.   
  30.   // <<BCastTo>>

src/fflib/lgmesh3.hpp:28:78: return from a call to CastTo<double>
  26.   
  27.   template<class Result>
  28.   inline Expression CastTo(const C_F0 & f) { return atype<Result>()->CastTo(f);}
                                                                                     ^
  29.   
  30.   // <<BCastTo>>

examples++-load/mat_psi.cpp:46:2: Skipping operator_E_F0_*: function or method not found
44.   	expTh= to<pmesh3>(args[1]);
45.   	expc = CastTo<double>(args[2]);
46.   	const E_Array * a= dynamic_cast<const E_Array*>((Expression) args[3]);
       ^
47.   	if (a->size() != 3) CompileError("syntax:  MatrixUpWind0(Th,rhi,[u1,u2])");
48.   	int err =0;

examples++-load/mat_psi.cpp:47:6: 
45.   	expc = CastTo<double>(args[2]);
46.   	const E_Array * a= dynamic_cast<const E_Array*>((Expression) args[3]);
47. > 	if (a->size() != 3) CompileError("syntax:  MatrixUpWind0(Th,rhi,[u1,u2])");
48.   	int err =0;
49.   	expu1= CastTo<double>((*a)[0]);
